#218251 - Task - E-mail templates - Merge cases - new closing email and tags

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
@@ -448,7 +448,7 @@
                                             @Translation.GetCoreTextTranslation("Datorinformation")
                                         </th>
                                     </tr>
-}
+                                }
                                 @Html.Action("MailTemplateFieldIdentifierRow", new { customerId = Model.Customer.Id, mailTemplateRowName = GlobalEnums.TranslationCaseFields.InventoryNumber.ToString() });
                                 <tr>
                                     <th colspan="2">
@@ -516,7 +516,7 @@
                                         </td>
 
                                     </tr>
-}
+                                }
                                 else
                                 {
                                     <tr>
@@ -537,7 +537,81 @@
                                         </td>
 
                                     </tr>
-}
+                                }
+                                if (Model.MailTemplateLanguage.MailTemplate.MailID == 18)
+                                {
+                                    <tr>
+                                        <th colspan="2">
+                                            @Translation.GetCoreTextTranslation("Sammanfogat ärende") @Translation.GetCoreTextTranslation("Allmänt")
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Sammanfogat ärende") @Translation.GetCoreTextTranslation("till")
+                                        </td>
+                                        <td>
+                                            [#MP1]
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Registrerat datum")
+                                        </td>
+                                        <td>
+                                            [#MP16]
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Registrerat av")
+                                        </td>
+                                        <td>
+                                            [#MP29]
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Länk till Självservice")
+                                        </td>
+                                        <td>
+                                            [#MP98]
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th colspan="2">
+                                            @Translation.GetCoreTextTranslation("Sammanfogat ärende") @Translation.GetCoreTextTranslation("Användarinformation")
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Namn")
+                                        </td>
+                                        <td>
+                                            [#MP3]
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th colspan="2">
+                                            @Translation.GetCoreTextTranslation("Sammanfogat ärende") @Translation.GetCoreTextTranslation("Ärendeinformation")
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Rubrik")
+                                        </td>
+                                        <td>
+                                            [#MP4]
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.GetCoreTextTranslation("Beskrivning")
+                                        </td>
+                                        <td>
+                                            [#MP5]
+                                        </td>
+                                    </tr>
+                                }
                             }
                             else if (Model.MailTemplateLanguage.MailTemplate.MailID > 39 && Model.MailTemplateLanguage.MailTemplate.MailID < 50)
                             {
@@ -550,39 +624,39 @@
                                                 @if (item.OrderField == "Customer_Id")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Allmänt")
-}
+                                                }
                                                 else if (item.OrderField == "User_Id")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Användare")
-}
+                                                }
                                                 else if (item.OrderField == "OrdererID")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Beställare")
-}
+                                                }
                                                 else if (item.OrderField == "OrderProperty_Id")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Beställning")
-}
+                                                }
                                                 else if (item.OrderField == "ReceiverId")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Mottagare")
-}
+                                                }
                                                 else if (item.OrderField == "SupplierOrderNumber")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Orderinformation")
-}
+                                                }
                                                 else if (item.OrderField == "DeliveryDate")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Leveransinformation")
-}
+                                                }
                                                 else if (item.OrderField == "Program")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Program")
-}
+                                                }
                                                 else if (item.OrderField == "Filename")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Övrigt")
-}
+                                                }
 
                                             </th>
 
@@ -594,7 +668,8 @@
                                             <td>
                                                 @item.EMailIdentifier
                                             </td>
-                                        </tr>  }
+                                        </tr>
+                                    }
                                 }
                             }
                             else if (Model.MailTemplateLanguage.MailTemplate.MailID == 70)
@@ -608,35 +683,35 @@
                                                 @if (item.AccountField == "Customer_Id")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Allmänt")
-}
+                                                }
                                                 else if (item.AccountField == "UserId")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Användarinformation")
-}
+                                                }
                                                 else if (item.AccountField == "OrdererID")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Beställare")
-}
+                                                }
                                                 else if (item.AccountField == "AccountStartDate")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Kontoinformation")
-}
+                                                }
                                                 else if (item.AccountField == "ContactId")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Kontakt")
-}
+                                                }
                                                 else if (item.AccountField == "DeliveryName")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Leveransinformation")
-}
+                                                }
                                                 else if (item.AccountField == "Program")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Program")
-}
+                                                }
                                                 else if (item.AccountField == "CaseNumber")
                                                 {
                                                     @Translation.GetCoreTextTranslation("Övrigt")
-}
+                                                }
                                             </th>
 
                                         </tr>
@@ -647,7 +722,8 @@
                                             <td>
                                                 @item.EMailIdentifier
                                             </td>
-                                        </tr>  }
+                                        </tr>
+                                    }
                                 }
                             }
                             else if (Model.MailTemplateLanguage.MailTemplate.MailID > 59 && Model.MailTemplateLanguage.MailTemplate.MailID < 69)
@@ -696,7 +772,8 @@
                                     <td>
                                         [#5]
                                     </td>
-                                </tr>}
+                                </tr>
+                            }
                             else if (Model.MailTemplateLanguage.MailTemplate.MailID > 49 && Model.MailTemplateLanguage.MailTemplate.MailID < 60)
                             {
                                 <tr>
@@ -1182,14 +1259,16 @@
                                     <td>
                                         [#59]
                                     </td>
-                                </tr>}
+                                </tr>
+                            }
                             @if (Model.MailTemplateLanguage.MailTemplate.MailID == (int)GlobalEnums.MailTemplates.ClosedCase)
                             {
                                 <tr>
                                     <th colspan="2">
                                         @Translation.GetCoreTextTranslation("Återkoppling")
                                     </th>
-                                </tr>foreach (var feedback in (List<FeedbackOverviewModel>)ViewBag.Feedbacks)
+                                </tr>
+                                foreach (var feedback in (List<FeedbackOverviewModel>)ViewBag.Feedbacks)
                                 {
                                     <tr>
                                         <td>
@@ -1199,20 +1278,20 @@
                                             [@feedback.Identifier]
                                         </td>
                                     </tr>
-}
+                                }
                             }
                             @*
-                COMMENTED OUT BECAUSE THIS MODULE IS NOT YET FINISHED
+            COMMENTED OUT BECAUSE THIS MODULE IS NOT YET FINISHED
+        <tr>
+            <th colspan="2">@Translation.GetCoreTextTranslation("Snabbenkät")
+            </th>
+        </tr>
             <tr>
-                <th colspan="2">@Translation.GetCoreTextTranslation("Snabbenkät")
-                </th>
-            </tr>
-                <tr>
-                    <td>@Translation.GetCoreTextTranslation("Snabbenkät")
-                    </td>
-                    <td>[#777]
-                    </td>
-                </tr>*@
+                <td>@Translation.GetCoreTextTranslation("Snabbenkät")
+                </td>
+                <td>[#777]
+                </td>
+            </tr>*@
                         </table>
 
 
