#218251 - Task - E-mail templates - Merge cases - new closing email and tags - Uppdaterat script

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
@@ -36,7 +36,7 @@
                             </td>
                             <td>
                                 @if (mailTemplatesHasSendMethod.Contains((GlobalEnums.MailTemplates) Model.MailTemplateLanguage.MailTemplate.MailID) ||
-                                     Model.MailTemplateLanguage.MailTemplate.MailID > 100)
+                                     Model.MailTemplateLanguage.MailTemplate.MailID > 100 || Model.MailTemplateLanguage.MailTemplate.MailID == 18)
                                 {
                                     @Html.DropDownListFor(model => model.MailTemplateLanguage.MailTemplate.SendMethod, Model.SendMethods,
                                         new {id = "sendMethod" })
