--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_ParentCasesSingle.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_ParentCasesSingle.cshtml
@@ -27,7 +27,7 @@
 </script>
 
 
-<button type="button" class="close" data-dismiss="modal2" style="margin-right: 5px;">&times;</button>
+<button type="button" class="close" data-dismiss="modal" style="margin-right: 5px;">&times;</button>
 <div id="case_connect_to_parent_single_popup">
     <div class="content modalpopup">
         <div>
