--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -432,7 +432,7 @@
                 @Html.Partial("_ParentCases", Model.ConnectToParentModel)
             </div>
 
-            <div id="divConnectParentToParentSingle" role="dialog" class="modal modal2 hide fade case-connect-to-parent" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div id="divConnectParentToParentSingle" role="dialog" class="modal hide fade case-connect-to-parent" aria-labelledby="myModalLabel" aria-hidden="true">
                 @Html.Partial("_ParentCasesSingle", Model.ConnectToParentModel)
             </div>
         }
