--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -3224,7 +3224,7 @@
                             <input type="hidden" name="CaseFieldSettings[52].Required" value="0" />
                         </td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[52].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.FinishingDate.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            <input type="checkbox" name="CaseFieldSettings[52].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.FinishingDate.ToString()) == 1 ? "checked=checked" : "") value="1" disabled />
                             <input type="hidden" name="CaseFieldSettings[52].RequiredIfReopened" value="0" />
                         </td>
                         <td>
@@ -3266,7 +3266,7 @@
                             <input type="hidden" name="CaseFieldSettings[54].Required" value="0" />
                         </td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[54].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.ClosingReason.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            <input type="checkbox" name="CaseFieldSettings[54].RequiredIfReopened" @(Model.CaseFieldSettings.getRequiredIfReopened(GlobalEnums.TranslationCaseFields.ClosingReason.ToString()) == 1 ? "checked=checked" : "") value="1"  disabled/>
                             <input type="hidden" name="CaseFieldSettings[54].RequiredIfReopened" value="0" />
                         </td>
                         <td>
