--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -76,6 +76,7 @@
 
     window.parameters = {
         saveCaseUrl: '@Url.Action("ExtendedCase", "Case")',
+        getWorkflowFinishingCauseUrl: '@Url.Action("GetWorkflowFinishingCause", "Case")',
         getWorkFlowStepsUrl: '@Url.Action("GetWorkflowSteps", "Case")',
         canSave: true,
         caseId:  @Model.CaseId,
