--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCaseWithCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCaseWithCase.cshtml
@@ -88,6 +88,7 @@
 
     window.parameters = {
         saveCaseUrl: '@Url.Action("ExtendedCase", "Case")',
+        getWorkflowFinishingCauseUrl: '@Url.Action("GetWorkflowFinishingCause", "Case")',
         getWorkFlowStepsUrl: '@Url.Action("GetWorkflowSteps", "Case")',
         canSave: true,
         caseId:  @Model.CaseId,
@@ -199,7 +200,7 @@
         }
     }
 
-    
+
     //Do not remove, use this when implementing categorization of fileuploads for multiple cases /TAN
     function openClipBoardPopUp(message) {
        $("a[href='#upload_clipboard_file_popup']").trigger("click");
@@ -209,7 +210,7 @@
         $("a[href='#upload_files_popup']").trigger("click");
     }
 
-    
+
 </script>
 
 @*@section Styles {
