218244 - Task - Case - Merge cases - action - close case - Transtation missing in view

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -2188,7 +2188,7 @@
                                                     @CaseFieldCaption(GlobalEnums.TranslationCaseFields.FinishingDescription, "Avslutsbeskrivning")
                                                 </td>
                                                 <td>
-                                                    @Model.case_.FinishingDescription
+                                                    @Translation.GetCoreTextTranslation(@Model.case_.FinishingDescription)
                                                 </td>
                                                 <td></td>
                                             </tr>
